fixed spacing on nav

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,10 @@ nav a {
     font-weight: 700;
 }
 
+nav ul {
+    padding: 0px;
+}
+
 /*************************
 FOOTER
 *************************/
